--- a/.github/workflows/kuberay-upgrade.yml
+++ b/.github/workflows/kuberay-upgrade.yml
@@ -31,27 +31,20 @@ jobs:
           curl -Lo helm.tar.gz https://get.helm.sh/helm-v3.12.2-linux-amd64.tar.gz
           tar -zxvf helm.tar.gz
           mv linux-amd64/helm /usr/local/bin/helm
-          helm repo add kuberay https://ray-project.github.io/kuberay-helm/
-          helm repo update
 
       - name: Install kind
         run: go install sigs.k8s.io/kind@latest
 
-      - name: Create Kind Cluster
-        run: kind create cluster
-
-      - name: Set kubectl context
-        run: kubectl cluster-info --context kind-kind
+      - name: Setup first Kind Cluster with KubeRay Helm Repo
+        uses: ./.github/actions/setup-kind-cluster
 
       - name: Install Older KubeRay Operator (v1.3.2)
-        run: |
-          helm repo add kuberay https://ray-project.github.io/kuberay-helm/
-          helm install kuberay-operator kuberay/kuberay-operator --version 1.3.2
+        uses: ./.github/actions/install-kuberay-operator
+        with:
+          version: '1.3.2'
 
-      - name: Wait for Kuberay Operator to be available
-        run: kubectl wait --timeout=90s --for=condition=Available=true deployment -n default kuberay-operator
-
-      - name: Prepare and Run Upgrade Tests
+      - name: Prepare and Run Upgrade Tests to 1.4.0
+        id: upgrade-to-latest
         run: |
           cd kuberay/ray-operator
           echo "--- START:Running e2e Operator upgrade (v1.3.2 to v1.4.0 operator) tests"
@@ -59,29 +52,41 @@ jobs:
           go test -timeout 30m -v ./test/e2eupgrade
           echo "--- END:e2e Operator upgrade (v1.3.2 to v1.4.0 operator) tests finished"
 
-      - name: Debug Kubernetes Cluster on Failure
-        if: failure()
-        run: |
-          echo "--- DEBUG OUTPUT ---"
-          echo "Checking GitHub Runner resources..."
-          lscpu
-          free -h
-          echo "Checking Kubernetes cluster state..."
-          kubectl cluster-info
-          kubectl get nodes
-          
-          echo "Describing all nodes..."
-          kubectl describe nodes
-          echo "Printing all Kubernetes events..."
-          kubectl get events -A
-          echo "Getting logs of Kind control plane container..."
-          docker logs kind-control-plane
-          echo "--- END OF DEBUG OUTPUT ---"
-      - name: Display all pods on kind cluster
-        if: failure()
-        run: kubectl get pods -A
+      - name: Debug Kubernetes Cluster on First Test Failure
+        if: failure() && steps.upgrade-to-latest.outcome == 'failure'
+        uses: ./.github/actions/debug-kubernetes-cluster
 
-      - name: Cleanup
+      - name: Cleanup first Kind Cluster
         if: always()
-        run: kind delete clusters --all || true
+        uses: ./.github/actions/cleanup-kind-cluster
+
+      - name: Setup second Kind Cluster with KubeRay Helm Repo
+        uses: ./.github/actions/setup-kind-cluster
+
+      - name: Install KubeRay Operator (v1.4.0) for nightly upgrade
+        uses: ./.github/actions/install-kuberay-operator
+        with:
+          version: '1.4.0'
+
+      - name: Prepare and Run Upgrade Tests to nightly
+        id: upgrade-to-nightly
+        run: |
+          cd kuberay/ray-operator
+          export KUBERAY_TEST_UPGRADE_IMAGE="nightly"
+          export IMG="kuberay/kuberay-operator:$KUBERAY_TEST_UPGRADE_IMAGE"
+          make docker-image
+          kind load docker-image "$IMG"
+
+          echo "--- START:Running e2e Operator upgrade (v1.4.0 to nightly operator) tests"
+          USE_LOCAL_HELM_CHART=true KUBERAY_TEST_TIMEOUT_SHORT=1m KUBERAY_TEST_TIMEOUT_MEDIUM=5m KUBERAY_TEST_TIMEOUT_LONG=10m KUBERAY_TEST_UPGRADE_IMAGE="$KUBERAY_TEST_UPGRADE_IMAGE" \
+          go test -timeout 30m -v ./test/e2eupgrade
+          echo "--- END:e2e Operator upgrade (v1.4.0 to nightly operator) tests finished"
+
+      - name: Debug Kubernetes Cluster on Second Test Failure
+        if: failure() && steps.upgrade-to-nightly.outcome == 'failure'
+        uses: ./.github/actions/debug-kubernetes-cluster
+
+      - name: Cleanup second Kind Cluster
+        if: always()
+        uses: ./.github/actions/cleanup-kind-cluster
         
