--- a/.github/workflows/kuberay-e2e-tests.yml
+++ b/.github/workflows/kuberay-e2e-tests.yml
@@ -28,8 +28,8 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Setup and start KinD cluster
-        uses: ./kuberay/.github/workflows/actions/kind
+      - name: Setup Kind Cluster with KubeRay Helm Repo
+        uses: ./.github/actions/setup-kind-cluster
 
       - name: Deploy Kuberay operator
         id: deploy
@@ -78,3 +78,7 @@ jobs:
           retention-days: 10
           path: |
             **/*.log
+
+      - name: Cleanup Kind Cluster
+        if: always()
+        uses: ./.github/actions/cleanup-kind-cluster
