conf: update ray image in e2e workflow

--- a/.github/workflows/kuberay-e2e-tests.yml
+++ b/.github/workflows/kuberay-e2e-tests.yml
@@ -56,9 +56,7 @@ jobs:
       - name: Run e2e tests (excluding TestRayJobRecovery)
         if: steps.deploy.outcome == 'success'
         run: |
-          export KUBERAY_TEST_TIMEOUT_SHORT=5m
-          export KUBERAY_TEST_TIMEOUT_MEDIUM=12m
-          export KUBERAY_TEST_TIMEOUT_LONG=15m
+          export KUBERAY_TEST_TIMEOUT_SHORT=5m KUBERAY_TEST_TIMEOUT_MEDIUM=12m KUBERAY_TEST_TIMEOUT_LONG=15m KUBERAY_TEST_RAY_IMAGE=rayproject/ray:2.52.1
 
           set -euo pipefail
           cd kuberay/ray-operator
